회의록 추가.

--- a/progress record/2022-03-13.md
+++ b/progress record/2022-03-13.md
@@ -43,5 +43,6 @@
 그럼 이를 어떤식으로 구상해 나갈지 밑그림을 그려보자.
 
 >>
-![디자인 예시.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/b2c07fc7-d183-4b08-af71-97e371d710b5/디자인_예시.png)
+![디자인 예시](https://user-images.githubusercontent.com/97139377/160725228-23cb01df-23c6-4cfd-a008-83d44bf187a5.png)
+
 
