회의록 추가.

--- a/progress record/2022-03-13.md
+++ b/progress record/2022-03-13.md
@@ -10,8 +10,8 @@
   2. 기존 학생증의 RFID 방식이 가지는 보안성 문제를 블록체인 기술로 해결하자.  
   3. 기존 RFID시스템이 가지는 보안성 문제는 이 논문의 56p.내용이 있다.[(2009.유국남)RFID 시스템의 한계와 미래 발전 방향]  
       + 낮은 가격을 위하여 태그자체의 자원의 한계가 발생하게 된다.RFID 시스템은 자원의 한계라는 문제를 안고 있으며,그 중 가장 현대에서 가장 중요시하는 프라이버시 문제이다.  
-      + 프라이버시 문제는 대부분의 태그가 자체 전원이 없는 수동형 모델을 채택하고 있고,자원적인 제약으로 인하여 태그 안에서 어떤 특정연산이나 동작을 통하여 태그의 정보를 보호하기 힘들어지기 때문에   
-      + 태그의 정보를 보호하기 위해서는 특별한 정보 보호가 필요할 것이다.그렇지 않으면 태그를 읽을 수 있는 리더기만 있다면 개개인의 개인정보및 곳곳에 있는 RFID의 태그를 읽으므로 인해서 원치 않는 정보가 공개되는 결과를 가져오게 될 것이다.  
+        프라이버시 문제는 대부분의 태그가 자체 전원이 없는 수동형 모델을 채택하고 있고,자원적인 제약으로 인하여 태그 안에서 어떤 특정연산이나 동작을 통하여 태그의 정보를 보호하기 힘들어지기 때문에 태그의 정보를 보호하기 위해서는 특별한 정보 보호가 필요할 것이다.  
+        그렇지 않으면 태그를 읽을 수 있는 리더기만 있다면 개개인의 개인정보및 곳곳에 있는 RFID의 태그를 읽으므로 인해서 원치 않는 정보가 공개되는 결과를 가져오게 될 것이다.  
   4. 학생증으로서의 역할만 하기보다는 너무 많은 학교의 홈페이지 등을 통합하는 플랫폼으로 발전시켜 나가자.  
   
 
